{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 112,
  "lineage": "ae79912a-a6ff-ec05-5572-7f410f281789",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02fddc0e64b702d07",
            "arn": "arn:aws:ec2:ap-south-1:411719562396:elastic-ip/eipalloc-02fddc0e64b702d07",
            "association_id": "eipassoc-035294196e540815c",
            "domain": "vpc",
            "id": "eipalloc-02fddc0e64b702d07",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-01e6dacbc989d5644",
            "private_dns": "ip-10-0-11-244.ap-south-1.compute.internal",
            "private_ip": "10.0.11.244",
            "public_dns": "ec2-13-203-177-140.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.203.177.140",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip"
            },
            "tags_all": {
              "Name": "eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:411719562396:internet-gateway/igw-0a324fa3124cc368a",
            "id": "igw-0a324fa3124cc368a",
            "owner_id": "411719562396",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-03fdcc95b7c8aa1ae"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02fddc0e64b702d07",
            "association_id": "eipassoc-035294196e540815c",
            "connectivity_type": "public",
            "id": "nat-0666a83becfce3385",
            "network_interface_id": "eni-01e6dacbc989d5644",
            "private_ip": "10.0.11.244",
            "public_ip": "13.203.177.140",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e2876c79ee55dfc6",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.pub_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:411719562396:network-acl/acl-02b2c7bf9c6bfe6eb",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-02b2c7bf9c6bfe6eb",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "411719562396",
            "subnet_ids": [],
            "tags": {
              "Name": "nacl"
            },
            "tags_all": {
              "Name": "nacl"
            },
            "vpc_id": "vpc-03fdcc95b7c8aa1ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "private_nacl_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-022f27e46fbb8a291",
            "network_acl_id": "acl-02b2c7bf9c6bfe6eb",
            "subnet_id": "subnet-075d05eccd9e9f755"
          },
          "dependencies": [
            "aws_network_acl.nacl",
            "aws_subnet.private_subnet",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0643281b593b1f1b8",
            "network_acl_id": "acl-02b2c7bf9c6bfe6eb",
            "subnet_id": "subnet-0bec8077baa0f5315"
          },
          "dependencies": [
            "aws_network_acl.nacl",
            "aws_subnet.private_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "pub_nacl_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-022319c771bbb4b63",
            "network_acl_id": "acl-02b2c7bf9c6bfe6eb",
            "subnet_id": "subnet-0e2876c79ee55dfc6"
          },
          "dependencies": [
            "aws_network_acl.nacl",
            "aws_subnet.pub_subnet",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0057434ba40a23ae0",
            "network_acl_id": "acl-02b2c7bf9c6bfe6eb",
            "subnet_id": "subnet-05b283f4f01f27b23"
          },
          "dependencies": [
            "aws_network_acl.nacl",
            "aws_subnet.pub_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:411719562396:route-table/rtb-0cff5dee714bba475",
            "id": "rtb-0cff5dee714bba475",
            "owner_id": "411719562396",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0666a83becfce3385",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03fdcc95b7c8aa1ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:411719562396:route-table/rtb-0b196afce9e7c12de",
            "id": "rtb-0b196afce9e7c12de",
            "owner_id": "411719562396",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a324fa3124cc368a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03fdcc95b7c8aa1ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033a4c8e8365cfe76",
            "route_table_id": "rtb-0cff5dee714bba475",
            "subnet_id": "subnet-075d05eccd9e9f755"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.nat_route",
            "aws_subnet.private_subnet",
            "aws_subnet.pub_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029efaba5400b0d3d",
            "route_table_id": "rtb-0cff5dee714bba475",
            "subnet_id": "subnet-0bec8077baa0f5315"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.nat_route",
            "aws_subnet.private_subnet",
            "aws_subnet.pub_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a870f821d03b88e",
            "route_table_id": "rtb-0b196afce9e7c12de",
            "subnet_id": "subnet-0e2876c79ee55dfc6"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route",
            "aws_subnet.pub_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0343d421df1359bd3",
            "route_table_id": "rtb-0b196afce9e7c12de",
            "subnet_id": "subnet-05b283f4f01f27b23"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route",
            "aws_subnet.pub_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:411719562396:subnet/subnet-075d05eccd9e9f755",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075d05eccd9e9f755",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411719562396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri_subnet-0"
            },
            "tags_all": {
              "Name": "pri_subnet-0"
            },
            "vpc_id": "vpc-03fdcc95b7c8aa1ae"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:411719562396:subnet/subnet-0bec8077baa0f5315",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.192.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bec8077baa0f5315",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411719562396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri_subnet-1"
            },
            "tags_all": {
              "Name": "pri_subnet-1"
            },
            "vpc_id": "vpc-03fdcc95b7c8aa1ae"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:411719562396:subnet/subnet-0e2876c79ee55dfc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2876c79ee55dfc6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411719562396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_subnet-0"
            },
            "tags_all": {
              "Name": "pub_subnet-0"
            },
            "vpc_id": "vpc-03fdcc95b7c8aa1ae"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:411719562396:subnet/subnet-05b283f4f01f27b23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b283f4f01f27b23",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411719562396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_subnet-1"
            },
            "tags_all": {
              "Name": "pub_subnet-1"
            },
            "vpc_id": "vpc-03fdcc95b7c8aa1ae"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:411719562396:vpc/vpc-03fdcc95b7c8aa1ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-044d39a4a78d22668",
            "default_route_table_id": "rtb-0ed388ef217052b3c",
            "default_security_group_id": "sg-025084f9b8fc95150",
            "dhcp_options_id": "dopt-bfad4dd6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03fdcc95b7c8aa1ae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ed388ef217052b3c",
            "owner_id": "411719562396",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}